fixed vertical text alignment on quick links menu

--- a/source/_patterns/01-molecules/navigation/wwu-menu/_wwu-menu.scss
+++ b/source/_patterns/01-molecules/navigation/wwu-menu/_wwu-menu.scss
@@ -21,12 +21,13 @@
         a {
           @include breakpoint($large) {
             height: $toggle-size--larger;
-            padding: $large-spacing;
+            line-height: $toggle-size--larger;
           }
           width: 100%;
           height: $toggle-size;
-          padding: $standard-spacing;
+          padding: 0 $standard-spacing;
           text-align: center;
+          line-height: $toggle-size;
 
           &:hover,
           &:focus {
